[dm] fix button text being slightly off centre vertically

--- a/src/assets/stylesheets/button.css
+++ b/src/assets/stylesheets/button.css
@@ -8,7 +8,7 @@
 
   padding: 0;
   height: 60px;
-  line-height: 60px;
+  line-height: 58px;
   font-family: 'Barlow Condensed', sans-serif;
   font-size: 24px;
   font-weight: 500;
